<?xml version="1.0"?>
<package format="3">
  <name>onnxruntime_ros</name>
  <version>1.22.0</version>
  <description>onnxruntime_ros library</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
