<?xml version="1.0"?>
<package format="3">
  <name>onnxruntime_ros</name>
  <version>1.22.0</version>
  <description>Wrapper around the onnxruntime library to include it in a catkin workspace</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
